# mcp_newsletter_our

./: README.md
agentic_news_ours/: README.md  architecture.md  final_report.md  initial_report.md  pyproject.toml  report.md  requirements.txt
agentic_news_ours/src/agentic_news/: crew.py  main.py  ui.py
agentic_news_ours/src/agentic_news/config/: agents.yaml  tasks.yaml
agentic_news_ours/src/agentic_news/tools/: custom_tool.py  search_tools.py
